--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,62 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="author" content="Sean Campbell">
+  <title>Natac's Simon Game</title>
+  <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/style.min.css">
+</head>
+<body>
+
+<main class="container text-center">
+  <header class="row">
+    <h1 class="col-xs-12">Natac's Simon Repeat Game</h1>
+  </header><!-- /header -->
+
+  <section id="game-board">
+    <div class="row">
+      <div class="col-xs-3">
+        <input type="button" class="btn btn-lg btn-danger"  id="btn1">
+        <audio id="audio1" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" ></audio>
+      </div>
+      <div class="col-xs-3">
+        <input type="button" class="btn btn-lg btn-warning" id="btn2">
+        <audio id="audio2" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" ></audio>
+      </div>
+      <div class="col-xs-3">
+        <input type="button" class="btn btn-lg btn-success" id="btn3">
+        <audio id="audio3" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" ></audio>
+      </div>
+      <div class="col-xs-3">
+        <input type="button" class="btn btn-lg btn-primary" id="btn4">
+        <audio id="audio4" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" ></audio>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6">
+        <button type="button" class="btn btn-info" id="start">Start</button>
+      </div>
+      <div class="col-xs-6">
+        <button type="button" class="btn btn-info" id="restart">Restart</button>
+      </div>
+    </div>
+  </section>
+
+
+</main>
+
+
+
+
+
+
+
+
+
+  <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="assets/main.min.js"></script>
+</body>
+</html>
