--- a/public/index.html
+++ b/public/index.html
@@ -18,19 +18,19 @@
   <section id="game-board">
     <div class="row">
       <div class="col-xs-3">
-        <input type="button" class="btn btn-lg btn-danger"  id="btn1">
+        <input type="button" class="btn btn-lg btn-danger square"  id="btn1">
         <audio id="audio1" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" ></audio>
       </div>
       <div class="col-xs-3">
-        <input type="button" class="btn btn-lg btn-warning" id="btn2">
+        <input type="button" class="btn btn-lg btn-warning square" id="btn2">
         <audio id="audio2" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" ></audio>
       </div>
       <div class="col-xs-3">
-        <input type="button" class="btn btn-lg btn-success" id="btn3">
+        <input type="button" class="btn btn-lg btn-success square" id="btn3">
         <audio id="audio3" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" ></audio>
       </div>
       <div class="col-xs-3">
-        <input type="button" class="btn btn-lg btn-primary" id="btn4">
+        <input type="button" class="btn btn-lg btn-primary square" id="btn4">
         <audio id="audio4" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" ></audio>
       </div>
     </div>
