did more refactoring of the functions from the main file to own separate files was able to add some test for the new addSound() function

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,10 @@
         <button type="button" class="btn btn-info" id="restart">Restart</button>
       </div>
     </div>
+    <div class="row">
+      <div class="col-xs-6">Round</div>
+      <div class="col-xs-6" id="round"></div>
+    </div>
   </section>
 
 
