started on styling and added a way to reset the user sequence

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="Sean Campbell">
   <title>Natac's Simon Game</title>
+  <link href='https://fonts.googleapis.com/css?family=Dhurjati' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/style.min.css">
 </head>
@@ -16,35 +17,37 @@
   </header><!-- /header -->
 
   <section id="game-board">
-    <div class="row">
-      <div class="col-xs-3">
-        <input type="button" class="btn btn-lg btn-danger square"  id="btn1">
-        <audio id="audio1" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" ></audio>
+    <div class="inner">
+      <div class="row">
+        <div class="col-xs-3">
+          <input type="button" class="btn btn-lg btn-danger square"  id="btn1">
+          <audio id="audio1" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" ></audio>
+        </div>
+        <div class="col-xs-3">
+          <input type="button" class="btn btn-lg btn-warning square" id="btn2">
+          <audio id="audio2" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" ></audio>
+        </div>
+        <div class="col-xs-3">
+          <input type="button" class="btn btn-lg btn-success square" id="btn3">
+          <audio id="audio3" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" ></audio>
+        </div>
+        <div class="col-xs-3">
+          <input type="button" class="btn btn-lg btn-primary square" id="btn4">
+          <audio id="audio4" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" ></audio>
+        </div>
       </div>
-      <div class="col-xs-3">
-        <input type="button" class="btn btn-lg btn-warning square" id="btn2">
-        <audio id="audio2" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" ></audio>
+      <div class="row">
+        <div class="col-xs-6">
+          <button type="button" class="btn btn-info" id="start">Start</button>
+        </div>
+        <div class="col-xs-6">
+          <button type="button" class="btn btn-info" id="restart">Restart</button>
+        </div>
       </div>
-      <div class="col-xs-3">
-        <input type="button" class="btn btn-lg btn-success square" id="btn3">
-        <audio id="audio3" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" ></audio>
+      <div class="row">
+        <div class="col-xs-6">Round</div>
+        <div class="col-xs-6" id="round">--</div>
       </div>
-      <div class="col-xs-3">
-        <input type="button" class="btn btn-lg btn-primary square" id="btn4">
-        <audio id="audio4" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" ></audio>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-6">
-        <button type="button" class="btn btn-info" id="start">Start</button>
-      </div>
-      <div class="col-xs-6">
-        <button type="button" class="btn btn-info" id="restart">Restart</button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-6">Round</div>
-      <div class="col-xs-6" id="round"></div>
     </div>
   </section>
 
